# loreley

./: .gitignore  404.html  README.md  docker-compose.yml  env.example  index.html  main.py  mkdocs.yml  pyproject.toml
.github/docs-state/: pr-1-head.sha  pr-3-head.sha  pr-5-head.sha
.github/workflows/: ci.yml  update-docs.yml
adr/0001-incremental-repo-state-embedding/: index.html
adr/0002-repo-state-commit-hash-only/: index.html
adr/0003-experiment-config-locking-and-dispatch/: index.html
adr/0004-loreleyignore-for-embedding-scope/: index.html
adr/0005-remove-summary-embedding-flow/: index.html
adr/0006-auto-start-ui-api-from-ui/: index.html
adr/0007-vectorized-occupied-cell-neighborhood-sampling/: index.html
adr/0008-single-scheduler-per-experiment-lock/: index.html
adr/0009-immutable-file-embedding-cache/: index.html
adr/0010-incremental-only-repo-state-embeddings/: index.html
adr/0011-remove-max-files-cap-add-startup-approval/: index.html
adr/0012-pinned-ignore-rules-in-experiment-snapshot/: index.html
adr/0013-remove-filter-and-prompt-signatures/: index.html
adr/0014-experiment-scoped-file-embedding-cache/: index.html
adr/0015-experiment-attached-workers-and-per-experiment-queues/: index.html
adr/0016-typer-unified-cli/: index.html
adr/0017-tenacity-openai-retries/: index.html
adr/0018-remove-legacy-script-wrappers/: index.html
adr/0019-pathspec-gitignore-matching/: index.html
adr/0020-split-agent-backends-and-extract-runner/: index.html
adr/0021-httpx-internal-http-client/: index.html
adr/0022-pydantic-from-attributes-ui-api-schemas/: index.html
adr/0022-ui-api-client-connection-reuse/: index.html
adr/0023-lock-experiment-behavior-keyset-and-settings-injection/: index.html
adr/0024-env-only-settings-no-experiment-snapshot/: index.html
adr/0025-explicit-experiment-id-env-only-and-drop-legacy-snapshot/: index.html
adr/0026-experiment-id-as-naming-namespace/: index.html
adr/0027-single-tenant-db-and-instance-metadata/: index.html
adr/0028-unify-git-commit-availability-and-fail-fast-best-branch/: index.html
app/: config.py
app/core/: experiments.py
app/db/: base.py  models.py
app/scheduler/: main.py
app/tasks/: broker.py  workers.py
docs/: index.md
examples/: evol_circle_packing.py
loreley/: cli.py  config.py  entrypoints.py  naming.py  preflight.py
script/: doctor.py  reset_db.py  run_scheduler.py  run_ui.py  run_worker.py
search/: search_index.json
tests/: conftest.py  test_embedding_dimensions_config.py  test_naming.py  test_preflight.py
(+246 files in other folders)
