[project]
name = "loreley"
dynamic = ["version"]
description = "Production-grade framework that automatically evolves the entire git repository."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dramatiq[redis]>=2.0.0",
    "gitpython>=3.1.45",
    "loguru>=0.7.3",
    "openai>=2.8.1",
    "psycopg[binary,pool]>=3.2.12",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "ribs>=0.8.3",
    "rich>=14.2.0",
    "scikit-learn>=1.7.2",
    "sqlalchemy>=2.0.44",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "mkdocs-material>=9.7.0",
    "pymdown-extensions>=10.17.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.1",
    "mkdocs-material>=9.7.0",
]

[build-system]
requires = [
    "hatchling>=1.28.0",
    "hatch-vcs",
]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["loreley"]

authors = [
  { name = "Voile", email = "voiletech42@gmail.com" },
]
maintainers = [
  { name = "Voile", email = "voiletech42@gmail.com" },
]

license = { file = "LICENSE" }

keywords = [
  "evolution",
  "map-elites",
  "ai",
  "optimization",
  "code-generation",
]

classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://NeapolitanIcecream.github.io/loreley/"
Repository = "https://github.com/NeapolitanIcecream/loreley"
Documentation = "https://NeapolitanIcecream.github.io/loreley/"
Issues = "https://github.com/NeapolitanIcecream/loreley/issues"
